put in custom code to reproduce issue

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<section #scrollView>
-  <article #viewer></article>
-</section>
+<div #scrollView style="width: 100%; height: 100%">
+  <div #viewer style="width: 100%; height: 100%"></div>
+</div>
+
+<!-- <iframe width="100%" height="300" src="https://www.urbanpro.com/kolkata/self-and-beyond-golf-green/4422880"></iframe> -->
+<!-- <iframe width="100%" height="300" src="/lib/core/pdf/iframe.html" #frame></iframe> -->
